--- a/packages/test-app/static/index.html
+++ b/packages/test-app/static/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="./style.css" />
 		<title>
-			@calmdownval/presentation test app
+			@calmdownval/slideshow test app
 		</title>
 	</head>
 	<body>
